--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,7 @@ header {
     margin-top: 8px;
     text-decoration: none;
     margin-right: 5px;
+    display: inline-block;
 }
 
 .loginBtn {
@@ -105,7 +106,7 @@ footer p {
 }
 
 img {
-    width: 50px;
+    width: 60px;
     height: auto;
 }
 
